--- a/Experimentos e tratamento do dataset/CKD - Experimentos.ipynb
+++ b/Experimentos e tratamento do dataset/CKD - Experimentos.ipynb
@@ -2357,7 +2357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -2717,15 +2717,15 @@
        "[384 rows x 32 columns]"
       ]
      },
-     "execution_count": 139,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "df_final = df_final.reindex(FEATURES + TARGET, axis=1)\n",
     "df_final = df_final.dropna()  \n",
-    "df_final"
+    "display(df_final)\n",
+    "#df_final.to_excel('CKD_DF_TRATADO.xlsx')"
    ]
   },
   {
