--- a/Modelo Final/Modelo final.ipynb
+++ b/Modelo Final/Modelo final.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Definição das features, do target e tratamento básico padrão "
+    "Definição das features, do target e tratamento básico padrão. É importante ressaltar que nas features categóricas, as colunas que apenas eram opostas, por exemplo \"pc_normal\" e \"pc_abnormal\" foram resumidas à label positiva, ou seja, apenas \"pc_normal\". É importante ressaltar que fazer isso não prejudicou ou melhorou o desempenho do modelo."
    ]
   },
   {
@@ -46,6 +46,13 @@
     "df_final = df_final.reindex(FEATURES + TARGET, axis=1)\n",
     "df_final = df_final.dropna()  \n",
     "df_finalNP = df_final.to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A realização da slit treino e teste é feita e todo o processo segue como exibido no notebook inicial."
    ]
   },
   {
