--- a/Modelo Final/Modelo final.ipynb
+++ b/Modelo Final/Modelo final.ipynb
@@ -122,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A célula abaixo serve como input para os dados do paciente. Os dados do paciente são salvos em um dicionário e este tem os valores numéricos convertidos para uma lista, a qual é reformulada apenas para ficar em 2D e ser submetida no modelo. A partir do resultado, é exibido se o paciente tem ou não (muito possivelmente) doença crônica renal."
+    "A célula abaixo serve como input para os dados do paciente. Os dados do paciente são salvos em um dicionário e este tem os valores numéricos convertidos para uma lista, a qual é reformulada apenas para ficar em 2D e ser submetida no modelo. A partir do resultado, é exibido se o paciente tem ou não (muito provavelmente) doença crônica renal."
    ]
   },
   {
@@ -169,9 +169,9 @@
     "\n",
     "\n",
     "if resultado_predicao[0] == 1:\n",
-    "    print(\"Esse paciente muito possivelmente tem doença renal crônica\")  \n",
+    "    print(\"Esse paciente muito provavelmente tem doença renal crônica\")  \n",
     "else:\n",
-    "    print(\"Esse paciente muito possivelmente não tem doença renal crônica\")  \n",
+    "    print(\"Esse paciente muito provavelmente não tem doença renal crônica\")  \n",
     "\n"
    ]
   }
