--- a/Experimentos e tratamento do dataset/CKD - Experimentos.ipynb
+++ b/Experimentos e tratamento do dataset/CKD - Experimentos.ipynb
@@ -5,12 +5,12 @@
    "id": "5209167a",
    "metadata": {},
    "source": [
-    "Inicialmente, todas as bibliotecas a serem usadas no tratamento do dataset e nos testes de modelo são importadas. Estas se resumem a "
+    "Inicialmente, todas as bibliotecas a serem usadas no tratamento do dataset e nos testes de modelo são importadas."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 418,
    "id": "6be7e2c3-a839-4b5f-881b-187d70704d9d",
    "metadata": {
     "tags": []
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 419,
    "id": "09415ffe-3e24-47a0-908b-af08177be16c",
    "metadata": {
     "tags": []
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 420,
    "id": "5c0170a1",
    "metadata": {},
    "outputs": [
@@ -509,7 +509,7 @@
        "(159, 21)"
       ]
      },
-     "execution_count": 371,
+     "execution_count": 420,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 421,
    "id": "57af9609",
    "metadata": {},
    "outputs": [
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 422,
    "id": "0ead49be",
    "metadata": {},
    "outputs": [],
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 423,
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +975,7 @@
        "[400 rows x 22 columns]"
       ]
      },
-     "execution_count": 374,
+     "execution_count": 423,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 424,
    "id": "fab93426",
    "metadata": {},
    "outputs": [],
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 425,
    "id": "7f40ffde",
    "metadata": {},
    "outputs": [
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 426,
    "id": "88d30677",
    "metadata": {},
    "outputs": [
@@ -1443,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 427,
    "id": "83f9723d",
    "metadata": {},
    "outputs": [
@@ -1868,7 +1868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 428,
    "id": "fcc51045",
    "metadata": {},
    "outputs": [],
@@ -1877,6 +1877,7 @@
     "FEATURES = [i for i in features if i not in categoricas] + new_columns\n",
     "FEATURES = FEATURES[:-2]\n",
     "TARGET = ['ckd']\n",
+    "\n",
     "\n",
     "mms = MinMaxScaler()\n",
     "df_final[[\"bp\", \"bgr\", \"bu\", \"sc\", \"sod\", \"pot\", \"hemo\", \"pcv\", \"wc\", \"rc\"]] = mms.fit_transform(df_final[[\"bp\", \"bgr\", \"bu\", \"sc\", \"sod\", \"pot\", \"hemo\", \"pcv\", \"wc\", \"rc\"]])"
@@ -1892,7 +1893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 429,
    "metadata": {},
    "outputs": [
     {
@@ -2265,7 +2266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 430,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2282,7 +2283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 431,
    "id": "e6b0837e",
    "metadata": {},
    "outputs": [],
@@ -2307,7 +2308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 432,
    "id": "dd98ea27",
    "metadata": {},
    "outputs": [
@@ -2357,7 +2358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 433,
    "metadata": {},
    "outputs": [
     {
